<resources>
    <string name="app_name">IndiqMe</string>

    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="esqueci_minha_senha">Esqueci Minha Senha</string>
    <string name="recuperar_senha">Recuperar Senha</string>

    <string name="indiq_me">Indiq.Me</string>
    <string name="indicado">Indicado</string>
    <string name="manutencao">Manutencão</string>
    <string name="perfil">Perfil</string>
    <string name="cadastroDadosPessoal">Cadastro(Dados Pessoal)</string>
    <string name="avancar">Avançar</string>
    <string name="nome">Nome</string>
    <string name="cadastroCidade">Cadastro(Cidade)</string>
    <string name="email">E-mail:</string>
    <string name="telefone">Telefone:</string>
    <string name="tecnologias">Tecnologias:</string>

</resources>
